--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "ioredis": "5.8.2",
     "lucide-react": "0.556.0",
     "next": "16.0.7",
+    "next-auth": "4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "3.4.0"
